apps/stirling-pdf/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf-stirling-pdf-chart
  namespace: stirling-pdf
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Stirling PDF"
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "stirling-pdf.png"
    gethomepage.dev/description: "PDF toolkit"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=stirling-pdf"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-stirling-pdf
  hostnames:
    - stirling-pdf.stevevaradi.me
  rules:
    - backendRefs:
        - name: stirling-pdf-stirling-pdf-chart
          port: 8080
